--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,22 +21,20 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          cache: 'pip'
 
       - name: Install dependencies
         run: |
-          pip install --upgrade pip
-          pip install nuitka requests ortools streamlit altair pandas plotly
+          pip install --upgrade pip wheel setuptools
+          pip install -r requirements.txt
 
       - name: Build Windows Executable
         run: |
-          nuitka --standalone --onefile --windows-disable-console `
-            --include-data-dir=locales=locales `
-            --include-data-file=tasks.json=tasks.json `
-            --output-dir=dist `
-            --python-flag=no_site `
-            --python-flag=no_asserts `
-            --python-flag=no_docstrings `
+          nuitka --standalone --onefile --windows-disable-console ^
+            --include-data-dir=locales=locales ^
+            --include-data-file=tasks.json=tasks.json ^
+            --output-dir=dist ^
+            --python-flag=no_site ^
+            --noinclude-streamlit-mode=skip ^
             app.py
 
       - name: Upload Windows Executable
@@ -56,12 +54,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          cache: 'pip'
 
       - name: Install dependencies
         run: |
-          pip install --upgrade pip
-          pip install nuitka requests ortools streamlit altair pandas plotly
+          pip install --upgrade pip wheel setuptools
+          pip install -r requirements.txt
 
       - name: Build Linux Executable
         run: |
@@ -70,8 +67,7 @@ jobs:
             --include-data-file=tasks.json=tasks.json \
             --output-dir=dist \
             --python-flag=no_site \
-            --python-flag=no_asserts \
-            --python-flag=no_docstrings \
+            --noinclude-streamlit-mode=skip \
             app.py
 
       - name: Upload Linux Executable
@@ -91,12 +87,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          cache: 'pip'
 
       - name: Install dependencies
         run: |
-          pip install --upgrade pip
-          pip install nuitka requests ortools streamlit altair pandas plotly
+          pip install --upgrade pip wheel setuptools
+          pip install -r requirements.txt
 
       - name: Build macOS Executable
         run: |
@@ -105,8 +100,7 @@ jobs:
             --include-data-file=tasks.json=tasks.json \
             --output-dir=dist \
             --python-flag=no_site \
-            --python-flag=no_asserts \
-            --python-flag=no_docstrings \
+            --noinclude-streamlit-mode=skip \
             app.py
 
       - name: Upload macOS Executable
